<resources>
    <!-- Landing page fragment-->
    <string name="app_name">ILinkTrip</string>
    <string name="welcome">Welcome \n to the ILink Trip</string>
    <string name="intro">meet and connect with other Israeli travelers all over the world</string>
    <string name="already_singed">already has user?</string>
    <string name="sign_in">Sign In</string>

    <!-- Register fragment-->
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="phone_number">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Again</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="register_btn">Submit</string>

    <!-- Login Fragment -->
    <string name="login_btn">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="logout_btn">Log Out</string>

    <!-- User -->
    <string name="user_name">User Name</string>

    <!-- Trip fragment-->
    <string name="starts_at">Starts At</string>
    <string name="duration">Duration</string>
    <string name="link_with_traveler">Link with traveler</string>
    <string name="select_trip_photos">Select Photos</string>
    <string name="mark_done">Mark As Done</string>

    <!-- Main Activity Bar -->
    <string name="home_tab">Home</string>
    <string name="add_trip_tab">Add Trip</string>
    <string name="profile_tab">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Profile Fragment -->
    <string name="my_trips">My Trips</string>
    <string name="my_favorites">My Favorites</string>
    <string name="edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Add Trip Fragment -->
    <string name="country">Country</string>
    <string name="place">place</string>
    <string name="save_trip">Save</string>
</resources>