<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landing_page_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:layout="@layout/fragment_landing_page"
    tools:context="com.example.ilinktrip.modules.landing.LandingPageFragment"
    >

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:layout_marginTop="48dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro_tv"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textColor="@color/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

    <Button
        android:id="@+id/get_started_btn"
        android:layout_width="287dp"
        android:layout_height="64dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/round_btn"
        android:text="Get Started"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_tv" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="279dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_btn"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/already_singed"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_started_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>