<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_traveler_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/traveler_profile_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/girl_avatar" />

    <TextView
        android:id="@+id/traveler_username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/traveler_profile_iv"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/link_traveler_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/link_with_traveler"
        android:textColor="@color/link_green"
        app:layout_constraintStart_toEndOf="@+id/traveler_profile_iv"
        app:layout_constraintTop_toBottomOf="@+id/traveler_username_tv" />

    <ImageButton
        android:id="@+id/mark_favorite_traveler_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/my_favorites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/link_traveler_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star" />
</androidx.constraintlayout.widget.ConstraintLayout>