<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ilinktrip.RegisterFragment"
    tools:layout="@layout/fragment_register">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_id_tv"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/id"
            android:textColor="@color/info"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_id_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_id_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_id_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_id_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/id" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/register_email_tv"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/email"
            android:textColor="@color/info"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_id_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_email_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_email_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/register_first_name_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/first_name"
            android:textColor="@color/info"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_email_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_first_name_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_first_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_first_name_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_first_name_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/first_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/register_last_name_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/last_name"
            android:textColor="@color/info"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_first_name_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_last_name_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_last_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_last_name_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_last_name_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/last_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/register_age_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/age"
            android:textColor="@color/info"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_last_name_tv" />

        <EditText
            android:id="@+id/register_age_et"
            android:layout_width="69dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_age_tv"
            app:layout_constraintStart_toEndOf="@+id/register_age_tv" />

        <TextView
            android:id="@+id/register_gender_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/gender"
            android:textColor="@color/info"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_age_et"
            app:layout_constraintStart_toEndOf="@+id/register_age_et" />

        <TextView
            android:id="@+id/register_phone_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/phone_number"
            android:textColor="@color/info"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_gender_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_phone_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_phone_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_phone_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_phone_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/phone_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/register_password_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/password"
            android:textColor="@color/info"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_phone_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_password_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_password_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/register_confirm_password_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/confirm_password"
            android:textColor="@color/info"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_confirm_password_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_confirm_password_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_confirm_password_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_confirm_password_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/confirm_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="287dp"
            android:layout_height="64dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/round_btn"
            android:text="@string/register_btn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_confirm_password_tv" />

        <RadioGroup
            android:id="@+id/register_gender_rg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/register_gender_tv"
            app:layout_constraintTop_toBottomOf="@+id/register_last_name_input_layout">

            <RadioButton
                android:id="@+id/register_gender_male_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/register_gender_female_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <ProgressBar
            android:id="@+id/register_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
