<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.profile.ProfileFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_iv"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="@color/info"
            android:src="@drawable/girl_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/circleImageView" />

        <TextView
            android:id="@+id/profile_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_iv" />

        <TextView
            android:id="@+id/profile_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@color/info"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_username_tv" />

        <Button
            android:id="@+id/profile_my_trips_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/my_trips"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_email_tv" />

        <Button
            android:id="@+id/profile_my_favorites_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/my_favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_my_trips_btn" />

        <Button
            android:id="@+id/profile_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_my_favorites_btn" />

        <ImageView
            android:id="@+id/profile_my_trips_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:src="@drawable/locations_group"
            app:layout_constraintEnd_toStartOf="@+id/profile_my_trips_btn"
            app:layout_constraintHorizontal_bias="0.696"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_email_tv" />

        <ImageView
            android:id="@+id/profile_my_favorites_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:src="@drawable/star"
            app:layout_constraintEnd_toStartOf="@+id/profile_my_favorites_btn"
            app:layout_constraintHorizontal_bias="0.801"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_my_trips_iv" />

        <ImageView
            android:id="@+id/profile_edit_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:src="@drawable/edit_box"
            app:layout_constraintEnd_toStartOf="@+id/profile_edit_btn"
            app:layout_constraintHorizontal_bias="0.714"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_my_favorites_iv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>